[package]
name = "tirana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0",  features = ["full"] }
tokio-stream = { version = "0.1" }
irc-proto = { version = "0.14.0" }
bytes = "1.1.0"
